# Deriv-Guardian-Graph-Native-Investigation-Copilot-hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  eda.ipynb  pyproject.toml  railway.json  render.yaml  test.ipynb
data/kumo_export/: accounts.csv  commissions.csv  referrals.csv  trades.csv
data/predictions/: enriched_predictions.csv  evaluation_report.json  raw_predictions.csv  top_risk_partners.json
data/transformed/: clients.csv  commissions.csv  fraud_rings.json  partners.csv  referrals.csv  trades.csv  withdrawals.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: BubbleChart.jsx  Copilot.jsx  Dashboard.jsx  GraphView.jsx  PartnerList.jsx  PatternBreakdown.jsx  PatternLab.jsx  Timeline.jsx
pipeline/: api.py  config.py  copilot.py  evaluate.py  export_kumo.py  inject_patterns.py  kumo_predict.py  parse_patterns.py  run_pipeline.py  transform.py
